Add Members API Documentation
