# app/Http/Controllers/API/MembersController.php
@@ -40,7 +40,7 @@ class MembersController extends Controller
      *                @OA\Property(
      *                    description="Department HMIK",
      *                    property="department",
-     *                    type="integer",
+     *                    type="string",
      *                    format="1",
      *                ),
      *                @OA\Property(
@@ -94,6 +94,7 @@ class MembersController extends Controller
      */
     public function createMember(Request $request)
     {
+        dd(request('name'));
         try {
             $validatedData = $request->validate([
                 'name' => 'string|required|max:100',
@@ -144,9 +145,122 @@ class MembersController extends Controller
         var_dump([$name, $departments]);
     }
 
-    public function updateMember(Request $request)
+    /**
+     * @OA\Post(
+     *    path="/api/members/update/{id}",
+     *    description="This API will update",
+     *    summary="Update a member",
+     *    operationId="updateMember",
+     *    security={{"bearerAuth":{}}},
+     * 
+     *    @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User id to update",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *
+     *    @OA\RequestBody(
+     *        description="Create Member Payload",
+     *        required=true,
+     *        @OA\MediaType(
+     *            mediaType="application/json",
+     *            @OA\Schema(
+     *                @OA\Property(
+     *                    description="name",
+     *                    property="name",
+     *                    type="string",
+     *                    format="Aidityas",
+     *                ),
+     *                @OA\Property(
+     *                    description="Moto Hidup",
+     *                    property="description",
+     *                    type="string",
+     *                    format="string",
+     *                ),
+     *                @OA\Property(
+     *                    description="Department HMIK",
+     *                    property="department",
+     *                    type="string",
+     *                    format="1",
+     *                ),
+     *                @OA\Property(
+     *                    description="Link to the profile Image",
+     *                    property="imgUrl",
+     *                    type="string",
+     *                    format="string",
+     *                ),
+     *                @OA\Property(
+     *                    description="Position in HMIK",
+     *                    property="position",
+     *                    type="string",
+     *                    format="string",
+     *                ),
+     *                @OA\Property(
+     *                    description="Link to LinkedIn Profile",
+     *                    property="linkedin",
+     *                    type="string",
+     *                    format="string",
+     *                ),
+     *                @OA\Property(
+     *                    description="Link to Instagram",
+     *                    property="instagram",
+     *                    type="string",
+     *                    format="string",
+     *                ),
+     *                @OA\Property(
+     *                    description="Link to github",
+     *                    property="github",
+     *                    type="string",
+     *                    format="string",
+     *                ),
+     *                required={"name","description","department","imgUrl","position"}
+     *            )
+     *        ),
+     *    ),
+     *    @OA\Response(
+     *      response="200",
+     *      description="User Updated",
+     *      @OA\Schema(ref="#/components/schemas/ApiResponse")    
+     *    ),
+     *    @OA\Response(
+     *      response="400",
+     *      description="Bad Request",
+     *      @OA\Schema(ref="#/components/schemas/ApiResponse")
+     *    ),
+     *    tags={
+     *          "members"
+     *      }
+     *)
+     */
+
+    public function updateMember(Request $request, $id)
     {
-        # code...
+        try {
+            try {
+                $rules = $request->validate([
+                    'name' => 'string|required|max:255',
+                    'description' => 'string|required|max:255',
+                    'department' => 'string|required|max:255',
+                    'imgUrl' => 'string|required|max:255',
+                    'position' => 'string|required|max:255',
+                    'linkedin' => 'string|max:255|nullable',
+                    'instagram' => 'string|max:255|nullable',
+                    'github' => 'string|max:255|nullable'
+                ]);
+                $member = Members::find($id);
+            } catch (Exception $e) {
+                throw new Exception($e->getMessage());
+            }
+            $isUpdate = $member->update($rules);
+
+            return Response::success($isUpdate, "Member has been updated", HttpStatus::$OK);
+        } catch (Exception $e) {
+            return Response::error($e->getMessage(), HttpStatus::$NOT_FOUND);
+        }
     }
 
     public function deleteMember(Request $request)
