# storage/api-docs/api-docs.json
@@ -172,7 +172,7 @@
                                     },
                                     "department": {
                                         "description": "Department HMIK",
-                                        "type": "integer",
+                                        "type": "string",
                                         "format": "1"
                                     },
                                     "imgUrl": {
@@ -209,6 +209,100 @@
                 "responses": {
                     "200": {
                         "description": "User Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/members/update/{id}": {
+            "post": {
+                "tags": [
+                    "members"
+                ],
+                "summary": "Update a member",
+                "description": "This API will update",
+                "operationId": "updateMember",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User id to update",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Create Member Payload",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "description",
+                                    "department",
+                                    "imgUrl",
+                                    "position"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "name",
+                                        "type": "string",
+                                        "format": "Aidityas"
+                                    },
+                                    "description": {
+                                        "description": "Moto Hidup",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "department": {
+                                        "description": "Department HMIK",
+                                        "type": "string",
+                                        "format": "1"
+                                    },
+                                    "imgUrl": {
+                                        "description": "Link to the profile Image",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "position": {
+                                        "description": "Position in HMIK",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "linkedin": {
+                                        "description": "Link to LinkedIn Profile",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "instagram": {
+                                        "description": "Link to Instagram",
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "github": {
+                                        "description": "Link to github",
+                                        "type": "string",
+                                        "format": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User Updated"
                     },
                     "400": {
                         "description": "Bad Request"
